--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-bcrypt==4.0.1
-blinker==1.6.2
-click==8.1.6
-colorama==0.4.6
-Flask==2.3.2
-Flask-Bcrypt==1.0.1
-Flask-Cors==4.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-PyMySQL==1.1.0
-Werkzeug==2.3.6
+certifi==2022.6.15.1
+distlib==0.3.6
+filelock==3.8.0
+gunicorn==20.1.0
+pipenv==2022.9.8
+platformdirs==2.5.2
+virtualenv==20.16.5
+virtualenv-clone==0.5.7
